unpackaged/main/default/objects/DocuSign_Settings__c/DocuSign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocuSign Settings</label>
</CustomObject>