unpackaged/main/default/objects/DocuSign_Settings__c/fields/DocuSign_Lendfully_URL__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Lendfully_URL__c</fullName>
    <label>DocuSign Lendfully URL</label>
    <type>Url</type>
</CustomField>