unpackaged/main/default/objects/DocuSign_Settings__c/fields/DocuSign_Powerform_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Powerform_Id__c</fullName>
    <label>DocuSign Powerform Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>