unpackaged/main/default/objects/DocuSign_Settings__c/fields/DocuSign_URL__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_URL__c</fullName>
    <description>For Sandbox:
https://demo.docusign.net

For Production:
https://na3.docusign.net</description>
    <inlineHelpText>For Sandbox:
https://demo.docusign.net

For Production:
https://na3.docusign.net</inlineHelpText>
    <label>DocuSign URL</label>
    <type>Url</type>
</CustomField>