unpackaged/main/default/objects/DocuSign_Settings__c/fields/EMC_Application_Form_Path__c.field-meta.xml
<CustomField>
    <fullName>EMC_Application_Form_Path__c</fullName>
    <label>EMC Application Form Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>