unpackaged/main/default/objects/DocuSign_Settings__c/fields/EMC_Host__c.field-meta.xml
<CustomField>
    <fullName>EMC_Host__c</fullName>
    <label>EMC Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>