unpackaged/main/default/objects/DocuSign_Settings__c/fields/Lendfully_Application_Form_Path__c.field-meta.xml
<CustomField>
    <fullName>Lendfully_Application_Form_Path__c</fullName>
    <label>Lendfully Application Form Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>