unpackaged/main/default/objects/DocuSign_Settings__c/fields/Lendfully_Host__c.field-meta.xml
<CustomField>
    <fullName>Lendfully_Host__c</fullName>
    <label>Lendfully Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>