unpackaged/main/default/objects/DocuSign_Settings__c/fields/Test_EMC__c.field-meta.xml
<CustomField>
    <fullName>Test_EMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test EMC</label>
    <type>Checkbox</type>
</CustomField>